Fix text alignments

--- a/src/index.css
+++ b/src/index.css
@@ -17,12 +17,12 @@ body {
 }
 /* ============================Virtical line ========================= */
 .verticalLine {
-  background-color: #8043ef; /* Purple background */
+  background-color: #8043ef;
   border-radius: 12px;
   color: white;
   text-align: center;
   font-size: 24px;
-  box-shadow: 0 0 20px 5px rgba(128, 67, 239, 0.6); /* Purple glow */
+  box-shadow: 0 0 20px 5px rgba(128, 67, 239, 0.6);
 }
 /* ============================Custom Transtion used at various Tags========================= */
 .myTransition{
@@ -70,5 +70,20 @@ body {
   to{ transform: rotate(360deg);
   }
   
+}
+.blinkingLine {
+  animation: blink 1.5s ease-in-out infinite;
+}
+
+@keyframes blink {
+  0% {
+    box-shadow: 0 0 0px 0px rgba(128, 67, 239, 0.6);
+  }
+  50% {
+    box-shadow: 0 0 20px 5px rgba(128, 67, 239, 0.6);
+  }
+  100% {
+    box-shadow: 0 0 0px 0px rgba(128, 67, 239, 0.6);
+  }
 }
 
